src/tintin.h

#define CHARSET_FLAG_UTF8                 BV01
struct listnode
{
	struct listroot       * root; // variable
	char                  * arg1;
	char                  * arg2;
	char                  * arg3;
	char                  * arg4;
	char                  * group;
	unsigned int            shots;
	int                     flags;
	union
	{
		pcre2_code        * regex;      // act, alias, gag, highlight, substitute
		char              * data;       // class
		struct room_data  * room;       // terrain
		long long           val64;      // delay, tick, path
		short               val16[4];   // button
		int                 val32[2];   // landmark, event, pathdir
	};
};
struct session
{
	struct session        * next;
	struct session        * prev;
	struct map_data       * map;
	struct port_data      * port;
	z_stream              * mccp2;
	z_stream              * mccp3;
	gnutls_session_t        ssl;
	struct termios          cur_terminal;
	struct log_data       * log;
	struct scroll_data    * scroll;
	struct split_data     * split;
	struct input_data     * input;
	char                  * name;
	char                  * group;
	char                  * line_capturefile;
	int                     line_captureindex;
	int                     gagline;
	struct listroot       * list[LIST_MAX];
	time_t                  created;
	int                     cur_row;
	int                     sav_row;
	int                     cur_col;
	int                     sav_col;
	int                     wrap;
	int                     fgc;
	int                     bgc;
	int                     vtc;
	int                     socket;
	int                     telopts;
	int                     telopt_flag[8];
	int                     event_flags;
        int                     config_flags;
	int                     flags;
	int                     charset;
	char                  * session_host;
	char                  * session_ip;
	char                  * session_port;
	char                  * cmd_color;
	unsigned char         * read_buf;
	int                     read_len;
	int                     read_max;
	unsigned long long      connect_retry;
	int                     connect_error;
//	char                    more_output[BUFFER_SIZE];
	char                  * more_output;
	int                     color;
	char                    color_patch[100];
	unsigned long long      packet_patch;
	unsigned long long      check_output;
	int                     scrollback_tab;
	int                     tab_width;
	unsigned long long      rand;
	unsigned short          rkey;
	struct port_data      * proxy;
};
extern char char_cmp(char left, char right);
extern char is_alpha(char input);
extern char is_digit(char input);
extern int match(struct session *ses, char *str, char *exp, int flags);
extern int is_utf8_head(char *str);
extern int get_utf8_width(char *str, int *width, int *index);
extern int gbk1_to_utf8(char *input, char *output);
extern int utf8_to_gbk1(char *input, char *output, int length);
extern int is_cp949(char *str);
extern int cp949_to_utf8(char *input, char *output);
extern int utf8_to_cp949(char *input, char *output);
extern char *get_variable_def(struct session *ses, char *var, char *def);
extern  int  valid_variable(struct session *ses, char *arg);
extern  int  string_raw_str_len(struct session *ses, char *str, int start, int end);
extern  int  string_str_raw_len(struct session *ses, char *str, int start, int end);
extern  int  translate_color_names(struct session *ses, char *string, char *result);
extern  int  get_color_names(struct session *ses, char *htype, char *result);
extern void  lowerstring(char *str);
extern void  upperstring(char *str);
extern void  numbertocharacter(struct session *ses, char *str);
extern void  charactertonumber(struct session *ses, char *str);
extern  int  delete_variable(struct session *ses, char *variable);
extern void  justify_string(struct session *ses, char *in, char *out, int align, int cut);
extern void  format_string(struct session *ses, char *format, char *arg, char *out);
extern struct listnode *search_variable(struct session *ses, char *variable);
extern struct listnode *get_variable(struct session *ses, char *variable, char *result);
extern struct listnode *set_variable(struct session *ses, char *variable, char *format, ...);
extern void init_pos(struct session *ses, int row, int col);
extern void hide_cursor(struct session *ses);
extern void show_cursor(struct session *ses);
extern void save_pos(struct session *ses);
extern void goto_pos(struct session *ses, int row, int col);
extern void restore_pos(struct session *ses);
extern void erase_cols(int cnt);
extern void reset(struct session *ses);
extern void scroll_region(struct session *ses, int top, int bottom);
extern void reset_scroll_region(struct session *ses);
extern int find_color_code(char *str);
extern int find_escaped_color_code(char *str);
extern int find_secure_color_code(char *str);
extern int get_vt102_width(struct session *ses, char *str, int *width);
extern int strip_vt102_width(struct session *ses, char *str, int *width);
extern int skip_vt102_codes(char *str);
extern int skip_vt102_codes_non_graph(char *str);
extern int strip_vt102_codes(char *str, char *buf);
extern void strip_vt102_codes_non_graph(char *str, char *buf);
extern void strip_non_vt102_codes(char *str, char *buf);
extern void get_color_codes(char *old, char *str, char *buf, int flags);
extern int strip_vt102_strlen(struct session *ses, char *str);
extern int strip_color_strlen(struct session *ses, char *str);
extern char *strip_vt102_strstr(char *str, char *buf, int *len);
extern int interpret_vt102_codes(struct session *ses, char *str, int real);
extern int catch_vt102_codes(struct session *ses, unsigned char *str, int cplen);