src/string.zig

pub extern fn gbk1_to_utf8(input: [*c]u8, output: [*c]u8) c_int;
pub extern fn utf8_to_gbk1(input: [*c]u8, output: [*c]u8, length: c_int) c_int;
pub extern fn is_cp949(str: [*c]u8) c_int;
pub extern fn cp949_to_utf8(input: [*c]u8, output: [*c]u8) c_int;
pub extern fn utf8_to_cp949(input: [*c]u8, output: [*c]u8) c_int;
pub extern fn do_replace(ses: [*c]struct_session, arg: [*c]u8, arg1: [*c]u8, arg2: [*c]u8, arg3: [*c]u8, arg4: [*c]u8) [*c]struct_session;
pub extern fn get_variable_def(ses: [*c]struct_session, @"var": [*c]u8, def: [*c]u8) [*c]u8;
pub extern fn valid_variable(ses: [*c]struct_session, arg: [*c]u8) c_int;
pub extern fn string_raw_str_len(ses: [*c]struct_session, str: [*c]u8, start: c_int, end: c_int) c_int;
pub extern fn string_str_raw_len(ses: [*c]struct_session, str: [*c]u8, start: c_int, end: c_int) c_int;
pub extern fn translate_color_names(ses: [*c]struct_session, string: [*c]u8, result: [*c]u8) c_int;
pub extern fn get_color_names(ses: [*c]struct_session, htype: [*c]u8, result: [*c]u8) c_int;
pub extern fn lowerstring(str: [*c]u8) void;
pub extern fn upperstring(str: [*c]u8) void;
pub extern fn numbertocharacter(ses: [*c]struct_session, str: [*c]u8) void;
pub extern fn charactertonumber(ses: [*c]struct_session, str: [*c]u8) void;
pub extern fn delete_variable(ses: [*c]struct_session, variable: [*c]u8) c_int;
pub extern fn justify_string(ses: [*c]struct_session, in: [*c]u8, out: [*c]u8, @"align": c_int, cut: c_int) void;
pub extern fn format_string(ses: [*c]struct_session, format: [*c]u8, arg: [*c]u8, out: [*c]u8) void;
pub extern fn search_variable(ses: [*c]struct_session, variable: [*c]u8) [*c]struct_listnode;
pub extern fn get_variable(ses: [*c]struct_session, variable: [*c]u8, result: [*c]u8) [*c]struct_listnode;
pub extern fn set_variable(ses: [*c]struct_session, variable: [*c]u8, format: [*c]u8, ...) [*c]struct_listnode;
pub extern fn init_pos(ses: [*c]struct_session, row: c_int, col: c_int) void;
pub extern fn hide_cursor(ses: [*c]struct_session) void;
pub extern fn show_cursor(ses: [*c]struct_session) void;
pub extern fn save_pos(ses: [*c]struct_session) void;
pub extern fn goto_pos(ses: [*c]struct_session, row: c_int, col: c_int) void;
pub extern fn restore_pos(ses: [*c]struct_session) void;
pub extern fn erase_cols(cnt: c_int) void;
pub extern fn reset(ses: [*c]struct_session) void;
pub extern fn scroll_region(ses: [*c]struct_session, top: c_int, bottom: c_int) void;
pub extern fn reset_scroll_region(ses: [*c]struct_session) void;
pub extern fn find_color_code(str: [*c]u8) c_int;
pub extern fn find_escaped_color_code(str: [*c]u8) c_int;
pub extern fn find_secure_color_code(str: [*c]u8) c_int;
pub extern fn get_vt102_width(ses: [*c]struct_session, str: [*c]u8, width: [*c]c_int) c_int;
pub extern fn strip_vt102_width(ses: [*c]struct_session, str: [*c]u8, width: [*c]c_int) c_int;
pub extern fn skip_vt102_codes(str: [*c]u8) c_int;
pub extern fn skip_vt102_codes_non_graph(str: [*c]u8) c_int;
pub extern fn strip_vt102_codes(str: [*c]u8, buf: [*c]u8) c_int;
pub extern fn strip_vt102_codes_non_graph(str: [*c]u8, buf: [*c]u8) void;
pub extern fn strip_non_vt102_codes(str: [*c]u8, buf: [*c]u8) void;
pub extern fn get_color_codes(old: [*c]u8, str: [*c]u8, buf: [*c]u8, flags: c_int) void;
pub extern fn strip_vt102_strlen(ses: [*c]struct_session, str: [*c]u8) c_int;
pub extern fn strip_color_strlen(ses: [*c]struct_session, str: [*c]u8) c_int;
pub extern fn strip_vt102_strstr(str: [*c]u8, buf: [*c]u8, len: [*c]c_int) [*c]u8;
pub extern fn interpret_vt102_codes(ses: [*c]struct_session, str: [*c]u8, real: c_int) c_int;
pub extern fn catch_vt102_codes(ses: [*c]struct_session, str: [*c]u8, cplen: c_int) c_int;
/// Compute the display width of a string between display columns `start` and `end`.
/// Skips VT102 escape codes and accounts for UTF-8 character widths.
pub export fn str_len_str(ses: [*c]struct_session, str: [*c]u8, start: c_int, end: c_int) c_int {
    if (str == null) return 0;
    const slice = std.mem.span(str);
    var raw_cnt: usize = 0;
    var str_cnt: c_int = 0;
    var ret_cnt: c_int = 0;

    while (raw_cnt < slice.len) {
        if (end >= 0 and str_cnt >= end) break;

        const current_ptr = &slice[raw_cnt];
        const tmp_cnt = skip_vt102_codes(current_ptr);
        if (tmp_cnt != 0) {
            raw_cnt += @intCast(tmp_cnt);
        } else if ((ses.*.charset & CHARSET_FLAG_UTF8) != 0 and is_utf8_head(current_ptr) != 0) {
            var width: c_int = undefined;
            const utf8_len = get_utf8_width(current_ptr, &width, null);
            if (str_cnt >= start) {
                ret_cnt += width;
            }
            str_cnt += width;
            raw_cnt += @intCast(utf8_len);
        } else {
            if (str_cnt >= start) {
                ret_cnt += 1;
            }
            str_cnt += 1;
            raw_cnt += 1;
        }
    }
    return ret_cnt;
}
/// Minimum raw byte length: compute the raw byte count for display columns
/// `start` to `end`. Breaks when str_cnt reaches end BEFORE processing the char.
pub export fn raw_len_str_min(ses: [*c]struct_session, str: [*c]u8, start: c_int, end: c_int) c_int {
    if (str == null) return 0;
    const slice = std.mem.span(str);
    var raw_cnt: usize = 0;
    var str_cnt: c_int = 0;
    var ret_cnt: c_int = 0;

    while (raw_cnt < slice.len) {
        if (str_cnt >= end) break;

        var width: c_int = undefined;
        const current_ptr = &slice[raw_cnt];
        const tmp_cnt = skip_vt102_codes(current_ptr);

        if (tmp_cnt != 0) {
            raw_cnt += @intCast(tmp_cnt);
            if (str_cnt >= start) {
                ret_cnt += tmp_cnt;
            }
            continue;
        } else if ((ses.*.charset & CHARSET_FLAG_UTF8) != 0 and is_utf8_head(current_ptr) != 0) {
            const utf8_len = get_utf8_width(current_ptr, &width, null);
            if (str_cnt >= start) {
                ret_cnt += utf8_len;
            }
            raw_cnt += @intCast(utf8_len);
        } else {
            if (str_cnt >= start) {
                ret_cnt += 1;
            }
            raw_cnt += 1;
            width = 1;
        }

        if (end >= 0 and (str_cnt + width) > end) break;
        str_cnt += width;
    }
    return ret_cnt;
}
/// Like raw_len_str_min but also grabs trailing color/escape codes past `end`.
/// Escape codes are always included in the count when past `start`, even after
/// `str_cnt` reaches `end` — the `end` check happens AFTER escape processing.
pub export fn raw_len_str_opt(ses: [*c]struct_session, str: [*c]u8, start: c_int, end: c_int) c_int {
    if (str == null) return 0;
    const slice = std.mem.span(str);
    var raw_cnt: usize = 0;
    var str_cnt: c_int = 0;
    var ret_cnt: c_int = 0;

    while (raw_cnt < slice.len) {
        const current_ptr = &slice[raw_cnt];
        const tmp_cnt = skip_vt102_codes(current_ptr);

        if (tmp_cnt != 0) {
            raw_cnt += @intCast(tmp_cnt);
            if (str_cnt >= start) {
                ret_cnt += tmp_cnt;
            }
            continue;
        }

        if (str_cnt >= end) break;

        var width: c_int = undefined;
        if ((ses.*.charset & CHARSET_FLAG_UTF8) != 0 and is_utf8_head(current_ptr) != 0) {
            const utf8_len = get_utf8_width(current_ptr, &width, null);
            if (str_cnt >= start) {
                ret_cnt += utf8_len;
            }
            raw_cnt += @intCast(utf8_len);
        } else {
            if (str_cnt >= start) {
                ret_cnt += 1;
            }
            raw_cnt += 1;
            width = 1;
        }

        if (end >= 0 and (str_cnt + width) > end) break;
        str_cnt += width;
    }
    return ret_cnt;
}
/// Raw-to-raw length: simple byte range calculation.
/// If `end` is -1, returns the remaining length from `start` to the end of the string.
pub export fn raw_len_raw(ses: [*c]struct_session, str: [*c]u8, start: c_int, end: c_int) c_int {
    _ = ses;
    if (end == -1) {
        return @as(c_int, @bitCast(@as(c_uint, @truncate(strlen(str) -% @as(c_ulong, @bitCast(@as(c_long, start)))))));
    }
    if (start >= end) return 0;
    return end - start;
}

test "is_alpha" {
    try std.testing.expectEqual(@as(u8, 2), is_alpha('a'));
    try std.testing.expectEqual(@as(u8, 2), is_alpha('Z'));
    try std.testing.expectEqual(@as(u8, 0), is_alpha('1'));
    try std.testing.expectEqual(@as(u8, 0), is_alpha(' '));
}

test "char_cmp" {
    // Same character: should match
    try std.testing.expectEqual(@as(u8, 1), char_cmp('a', 'a'));
    // Case-insensitive: 'a' and 'A' should match (same block, same lower 5 bits)
    try std.testing.expectEqual(@as(u8, 1), char_cmp('a', 'A'));
    try std.testing.expectEqual(@as(u8, 1), char_cmp('Z', 'z'));
    // Different letters: should not match
    try std.testing.expectEqual(@as(u8, 0), char_cmp('a', 'b'));
}

test "is_digit" {
    try std.testing.expectEqual(@as(u8, 1), is_digit('0'));
    try std.testing.expectEqual(@as(u8, 1), is_digit('9'));
    try std.testing.expectEqual(@as(u8, 0), is_digit('a'));
}
